# lead-qualification-system

./: .env.example  .env.production.example  .gitignore  Caddyfile  DEPLOY_VPS.md  Dockerfile  PRD-lead-qualification.md  README.md  docker-compose.production.yml  docker-compose.yml  lead-qualification-brief.md  main.py  pyproject.toml
.claude/: settings.local.json
db/: database.py
db/migrations/: env.py
db/migrations/versions/: 0001_initial_schema.py
docker/: init-postgres.sql
docs/plans/: 2026-03-03-lead-qualification-system.md
models/: ai_score.py  enrichment.py  error.py  lead.py  lead_event.py  schemas.py
n8n-workflows/: error-handler.json  lead-qualification.json
routers/: leads.py  metrics.py
scripts/: seed.py
services/: n8n_trigger.py
tests/: conftest.py  test_leads.py  test_metrics.py  test_models.py
